--- a/index.html
+++ b/index.html
@@ -20,28 +20,100 @@
       <![endif]-->
     </head>
     <body>
+     <div class="navbar navbar-inverse navbar-fixed-top visible-xs">
+            <div class="navbar-header ">
+              <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".navbar-collapse-01"></button>
+            </div>            
+            <div class="navbar-collapse collapse navbar-collapse-01">
+              <ul class="nav navbar-nav navbar-left">
+                <li class="active">
+                  <a href="#fakelink">
+                    Messages
+                    <span class="navbar-unread">1</span>
+                  </a>
+                  <ul>
+                    <li><a href="#fakelink">Element One</a></li>
+                    <li>
+                      <a href="#fakelink">Sub menu</a>
+                      <ul>
+                        <li><a href="#fakelink">Element One</a></li>
+                        <li><a href="#fakelink">Element Two</a></li>
+                        <li><a href="#fakelink">Element Three</a></li>
+                      </ul> <!-- /Sub menu -->
+                    </li>
+                    <li><a href="#fakelink">Element Three</a></li>
+                  </ul> <!-- /Sub menu -->
+                </li>
+                <li>
+                  <a href="#fakelink">
+                    About Us
+                  </a>
+                </li>
+              </ul>
+            </div><!--/.nav -->
+          </div>
+
+
+
       <div class="section"></div>
       <div id="wrap">
         <div class="container">
-          <div class="alert alert-success alert-dismissable">
-            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>I'm currently rewriting my website, so all the informations may not be accurate. Thank you !</div>
+          <div class="alert alert-success alert-dismissable visible-xs" >
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>For the best experience, I recommend you to visit my website on a tablet / computer !
+          </div>
             <h1>Hello. </h1>
-            <div class="media">
-              <div class="pull-left">
-                <img class="media-object img-circle" src="img/thomas_romera.png" height="128px" width="128px" alt="...">
-              </div>
-              <div id="lead-text-picture" class="media-body">
-                <span  class="lead">
-                  My name is Thomas Romera. <br>I am a 
-                  <span class="ruby-color"> <img width="50px" src="img/ruby.png"> (On Rails)</span> developer.</span>
-                </div>        
-              </div>
-            </div>
-          </div>   
+            <div class="row">
+              <div class="col-md-8">
+                <div class="media">
+                  <div class="pull-left">
+                    <img style="margin-bottom: 30px;" class="media-object img-circle" src="img/thomas_romera.png" height="128px" width="128px" alt="...">
+                  </div>
+                  <div id="lead-text-picture" class="media-body">
+                    <span  class="lead">
+                      My name is Thomas Romera. <br>I am a 
+                      <span class="ruby-color"> <img width="50px" src="img/ruby.png"> (On Rails)</span> developer.</span>
+                    </div>        
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <table class="table table-bordered">
+                      <tr>
+                        <td>Type of mission</td>
+                        <td>Freelance</td>
+                      </tr>
+                      <tr>
+                        <td>Availability</td>
+                        <td><span class="label label-danger">Not available</span></td>
+                      </tr>
+                        <tr>
+                          <td>Keep in touch !</td>
+                          <td>
+                            <a href="http://twitter.com/erowtom"><img src="img/socialicon/Skype.png" height="32" width="32" alt="Email" class="img-rounded"></a>
+                            <img src="img/socialicon/Arobase.png" height="30" width="30" alt="Email" class="img-rounded">
+                            <img src="img/socialicon/Twitter.png" height="30" width="30" alt="Email" class="img-rounded">
+                            <img src="img/socialicon/LinkedIn.png" height="30" width="30" alt="Email" class="img-rounded">
+                            <br>
+                            <img src="img/socialicon/Github.png" height="30" width="30" alt="Email" class="img-rounded">
+                          </td>
+                          
+                        </tr>
+                  </table>
 
+                </div>
+              </div>
+            </div>   
+          </div>
 
-          <div id="footer-step1">
+<!-- 
+          <div id="footer">
             <div class="container">
+              <p class="text-muted">Place sticky footer content here.</p>
+            </div>
+           </div> -->
+
+
+          <div id="footer-step1" class="visible-md hidden-xs">
+            <div class="container" id="test">
               <a href="#" style="color: black" id="arrow-down-first"> 
                 <p><center>
                   <img  height="120px" src="img/ruby.png"></center></a> </p>
@@ -87,7 +159,7 @@
 
 
 
-              <!-- Load JS here for greater good =============================-->
+              <!-- JS =============================-->
               <script src="js/jquery-1.10.2.min.js"></script>
           <!-- 
             <script src="js/jquery.ui.touch-punch.min.js"></script>
