Edit Responsive, removed picture on small device, added topbar on small devices

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <!-- Loading Flat UI -->
   <link href="css/flat-ui.css" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/default.css">
   <link rel="shortcut icon" href="img/favicon.ico">
 
   <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
@@ -65,7 +64,7 @@
             <div class="row">
               <div class="col-md-8">
                 <div class="media">
-                  <div class="pull-left">
+                  <div class="pull-left visible-md hidden-xs">
                     <img style="margin-bottom: 30px;" class="media-object img-circle" src="img/thomas_romera.png" height="128px" width="128px" alt="...">
                   </div>
                   <div id="lead-text-picture" class="media-body">
@@ -88,12 +87,13 @@
                         <tr>
                           <td>Keep in touch !</td>
                           <td>
-                            <a href="http://twitter.com/erowtom"><img src="img/socialicon/Skype.png" height="32" width="32" alt="Email" class="img-rounded"></a>
-                            <img src="img/socialicon/Arobase.png" height="30" width="30" alt="Email" class="img-rounded">
-                            <img src="img/socialicon/Twitter.png" height="30" width="30" alt="Email" class="img-rounded">
-                            <img src="img/socialicon/LinkedIn.png" height="30" width="30" alt="Email" class="img-rounded">
+                            <a href="http://twitter.com/erowtom"><img src="img/socialicon/Twitter.png" height="30" width="30" alt="Email" class="img-rounded"></a>
+                            <a href="http://linkedin.com/in/thomasromera"><img src="img/socialicon/LinkedIn.png" height="30" width="30" alt="Email" class="img-rounded"></a>
+                            <a href="http://github.com/erowlin"><img src="img/socialicon/Github.png" height="30" width="30" alt="Email" class="img-rounded">
                             <br>
-                            <img src="img/socialicon/Github.png" height="30" width="30" alt="Email" class="img-rounded">
+                            <a href="skype:thomas.romera?call"><img src="img/socialicon/Skype.png" height="32" width="32" alt="Email" class="img-rounded"></a>
+                            <a href="mailto:contact@thomas-romera.com"><img src="img/socialicon/Arobase.png" height="30" width="30" alt="Email" class="img-rounded"></a>
+
                           </td>
                           
                         </tr>
@@ -123,37 +123,7 @@
               <div class="section"></div>
               <div id="container" class="container">
                 <h1> My Skills </h1>
-                <div class="row">
-                  <div id="diagram"></div>
-                  <div class="get">
-                    <div class="arc">
-                      <span class="text">Ruby (On Rails)</span>
-                      <input type="hidden" class="percent" value="90" />
-                      <input type="hidden" class="color" value="#AD3B3B" />
-                    </div>
-                    <div class="arc">
-
-                      <span class="text" data="abcdef">HTML5 / CSS3</span>
-                      <input type="hidden" class="percent" value="80" />
-                      <input type="hidden" class="color" value="#97BE0D" />
-                    </div>
-                    <div class="arc">
-                      <span class="text">PostgreSQL</span>
-                      <input type="hidden" class="percent" value="75" />
-                      <input type="hidden" class="color" value="#bee9cc" />
-                    </div>
-                    <div class="arc">
-                      <span class="text">PHP</span>
-                      <input type="hidden" class="percent" value="70" />
-                      <input type="hidden" class="color" value="#BEDBE9" />
-                    </div>
-                    <div class="arc">
-                      <span class="text">Javascript / JQuery</span>
-                      <input type="hidden" class="percent" value="70" />
-                      <input type="hidden" class="color" value="#0769AD" />
-                    </div>
-                  </div>
-                </div>
+                
               </div>
 
 
@@ -175,7 +145,5 @@
           <script src="js/bootstrap.min.js"></script>
           <script src="js/index.js"></script>
           <script src="js/plugins/scrollto.js"></script>
-          <script src="js/raphael.js"></script>
-          <script src="js/skill-diagram.js"></script>
         </body>
         </html>
