TODO : Add ScrollSpy on Breadcrumb

--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
       </div><!--/.nav -->
     </div>
 
+    <ol id="nav-scrolled"  class="breadcrumb">
+  <li><a href="#">Home</a></li>
+  <li><a href="#">Who Am I ?</a></li>
+  <li><a href="#">Skills</a></li>
+</ol>
+
+
 
 
     <div class="section"></div>
@@ -129,10 +136,10 @@
                 <h1> My Skills </h1>
                 
               </div> -->
-              <div class="section"></div>
+              <div  id="step2" class="section"></div>
 
               <div class="container">
-              <h1> Who Am I ? </h1>
+                <h1> Who Am I ? </h1>
                 <div class="row">
                   <div class="col-sm-6 col-md-4">
                     <div class="thumbnail">
@@ -154,7 +161,7 @@
                   </div>
                   <div class="col-sm-6 col-md-4">
                     <div class="thumbnail">
-                      image
+                      TATAAAAAAAAA
                       <div class="caption">
                         <h3>Thumbnail label</h3>
                         <p>...</p>
@@ -163,7 +170,7 @@
                   </div>
                   <div class="col-sm-6 col-md-4">
                     <div class="thumbnail">
-                      image
+                      TOOTOOOOOOOOO
                       <div class="caption">
                         <h3>Thumbnail label</h3>
                         <p>...</p>
@@ -192,18 +199,21 @@
               </div>
 
               <div id="step2" class="slider visible-md hidden-xs">
-            <div class="container" id="test">
-              <a href="#" style="color: black" id="arrow-down-first"> 
-                <p>
-                  <center>
-                    <img height="120px" src="img/ruby.png">
-                  </center> 
-                </p>
-              </a>
-            </div>
-          </div>
+                <div class="container" id="test">
+                  <a href="#" style="color: black" id="arrow-down-first"> 
+                    <p>
+                      <center>
+                        <img height="120px" src="img/ruby.png">
+                      </center> 
+                    </p>
+                  </a>
+                </div>
+              </div>
 
-
+              <div class="section"></div>
+              <div class="container">
+                <h1>Skills</h1>
+              </div>
 
 
               <!-- JS =============================-->
