--- a/index.html
+++ b/index.html
@@ -18,55 +18,20 @@
       <script src="js/html5shiv.js"></script>
       <![endif]-->
     </head>
-    <body>
-     <div class="navbar navbar-inverse navbar-fixed-top visible-xs">
-      <div class="navbar-header ">
-        <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".navbar-collapse-01"></button>
-      </div>            
-      <div class="navbar-collapse collapse navbar-collapse-01">
-        <ul class="nav navbar-nav navbar-left">
-          <li class="active">
-            <a href="#fakelink">
-              Messages
-              <span class="navbar-unread">1</span>
-            </a>
-            <ul>
-              <li><a href="#fakelink">Element One</a></li>
-              <li>
-                <a href="#fakelink">Sub menu</a>
-                <ul>
-                  <li><a href="#fakelink">Element One</a></li>
-                  <li><a href="#fakelink">Element Two</a></li>
-                  <li><a href="#fakelink">Element Three</a></li>
-                </ul> <!-- /Sub menu -->
-              </li>
-              <li><a href="#fakelink">Element Three</a></li>
-            </ul> <!-- /Sub menu -->
-          </li>
-          <li>
-            <a href="#fakelink">
-              About Us
-            </a>
-          </li>
+    <body data-spy="scroll" data-target="#menu-scroll">
+      <a id="button-menu-scroll"><span class="glyphicon glyphicon-th-list"></span></a>
+
+      <div id="menu-scroll">
+        <ul class="nav nav-pills nav-stacked">
+          <li><a href="#home">Hello.</a></li>
+          <li><a href="#whoami">Who Am I ?</a></li>
+          <li><a href="#skills">Skills</a></li>
         </ul>
-      </div><!--/.nav -->
-    </div>
+      </div>
 
-    <ol id="nav-scrolled"  class="breadcrumb">
-  <li><a href="#">Home</a></li>
-  <li><a href="#">Who Am I ?</a></li>
-  <li><a href="#">Skills</a></li>
-</ol>
-
-
-
-
-    <div class="section"></div>
+    <div class="section" id="home"></div>
     <div class="wrap">
       <div class="container">
-        <div class="alert alert-success alert-dismissable visible-xs" >
-          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>For the best experience, I recommend you to visit my website on a tablet / computer !
-        </div>
         <h1>Hello. </h1>
         <div class="row">
           <div class="col-md-8">
@@ -81,18 +46,15 @@
                 </div>        
               </div>
             </div>
-            <div class="col-md-4">
-              <table class="table table-bordered">
+            <div class="col-md-2 col-xs-1">
+              <table style="text-align: center;" class="table table-bordered">
                 <tr>
-                  <td>Type of mission</td>
-                  <td>Freelance</td>
+                  <td>Developer Freelance</td>
                 </tr>
                 <tr>
-                  <td>Availability</td>
-                  <td><span class="label label-danger">Not available</span></td>
+                  <td><span class="label label-danger">Currently not available</span></td>
                 </tr>
                 <tr>
-                  <td>Keep in touch !</td>
                   <td>
                     <a href="http://twitter.com/erowtom"><img src="img/socialicon/Twitter.png" height="30" width="30" alt="Email" class="img-rounded"></a>
                     <a href="http://linkedin.com/in/thomasromera"><img src="img/socialicon/LinkedIn.png" height="30" width="30" alt="Email" class="img-rounded"></a>
@@ -111,113 +73,101 @@
           </div>   
         </div>
 
-<!-- 
-          <div id="footer">
-            <div class="container">
-              <p class="text-muted">Place sticky footer content here.</p>
+        <div id="step1" class="slider visible-md hidden-xs">
+          <div class="container" id="test">
+            <a href="#" style="color: black" id="arrow-down-first"> 
+              <p>
+                <center>
+                  <img height="120px" src="img/ruby.png">
+                </center> 
+              </p>
+            </a>
+          </div>
+        </div>
+
+
+        <div id="whoami" class="section"></div>
+
+        <div class="container">
+          <h1> Who Am I ? </h1>
+          <div class="row">
+            <div class="col-sm-6 col-md-4">
+              <div class="thumbnail">
+                image
+                <div class="caption">
+                  <h3>Thumbnail label</h3>
+                  <p>...</p>
+                </div>
+              </div>
             </div>
-          </div> -->
-
-
-          <div id="step1" class="slider visible-md hidden-xs">
-            <div class="container" id="test">
-              <a href="#" style="color: black" id="arrow-down-first"> 
-                <p>
-                  <center>
-                    <img height="120px" src="img/ruby.png">
-                  </center> 
-                </p>
-              </a>
+            <div class="col-sm-6 col-md-4">
+              <div class="thumbnail">
+                image
+                <div class="caption">
+                  <h3>Thumbnail label</h3>
+                  <p>...</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+              <div class="thumbnail">
+                TATAAAAAAAAA
+                <div class="caption">
+                  <h3>Thumbnail label</h3>
+                  <p>...</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+              <div class="thumbnail">
+                TOOTOOOOOOOOO
+                <div class="caption">
+                  <h3>Thumbnail label</h3>
+                  <p>...</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+              <div class="thumbnail">
+                image
+                <div class="caption">
+                  <h3>Thumbnail label</h3>
+                  <p>...</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+              <div class="thumbnail">
+                image
+                <div class="caption">
+                  <h3>Thumbnail label</h3>
+                  <p>...</p>
+                </div>
+              </div>
             </div>
           </div>
+        </div>
 
-             <!--  <div class="section"></div>
-              <div id="container" class="container">
-                <h1> My Skills </h1>
-                
-              </div> -->
-              <div  id="step2" class="section"></div>
+        <div id="step2" class="slider visible-md hidden-xs">
+          <div class="container" id="test">
+            <a href="#" style="color: black" id="arrow-down-first"> 
+              <p>
+                <center>
+                  <img height="120px" src="img/ruby.png">
+                </center> 
+              </p>
+            </a>
+          </div>
+        </div>
 
-              <div class="container">
-                <h1> Who Am I ? </h1>
-                <div class="row">
-                  <div class="col-sm-6 col-md-4">
-                    <div class="thumbnail">
-                      image
-                      <div class="caption">
-                        <h3>Thumbnail label</h3>
-                        <p>...</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-sm-6 col-md-4">
-                    <div class="thumbnail">
-                      image
-                      <div class="caption">
-                        <h3>Thumbnail label</h3>
-                        <p>...</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-sm-6 col-md-4">
-                    <div class="thumbnail">
-                      TATAAAAAAAAA
-                      <div class="caption">
-                        <h3>Thumbnail label</h3>
-                        <p>...</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-sm-6 col-md-4">
-                    <div class="thumbnail">
-                      TOOTOOOOOOOOO
-                      <div class="caption">
-                        <h3>Thumbnail label</h3>
-                        <p>...</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-sm-6 col-md-4">
-                    <div class="thumbnail">
-                      image
-                      <div class="caption">
-                        <h3>Thumbnail label</h3>
-                        <p>...</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-sm-6 col-md-4">
-                    <div class="thumbnail">
-                      image
-                      <div class="caption">
-                        <h3>Thumbnail label</h3>
-                        <p>...</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div id="step2" class="slider visible-md hidden-xs">
-                <div class="container" id="test">
-                  <a href="#" style="color: black" id="arrow-down-first"> 
-                    <p>
-                      <center>
-                        <img height="120px" src="img/ruby.png">
-                      </center> 
-                    </p>
-                  </a>
-                </div>
-              </div>
-
-              <div class="section"></div>
-              <div class="container">
-                <h1>Skills</h1>
-              </div>
+        <div class="section"></div>
+        <div class="container">
+          <h1>Skills</h1>
+        </div>
 
 
-              <!-- JS =============================-->
-              <script src="js/jquery-1.10.2.min.js"></script>
+        <!-- JS =============================-->
+        <script src="js/jquery-1.10.2.min.js"></script>
           <!-- 
             <script src="js/jquery.ui.touch-punch.min.js"></script>
             <script src="js/application.js"></script>
