Corrected some bug due to the scroll, fixed the left menu, added the skill and more about me sections, included some template for those section, and beginning of the wrting of coder

--- a/index.html
+++ b/index.html
@@ -20,154 +20,202 @@
     </head>
     <body data-spy="scroll" data-target="#menu-scroll">
       <a id="button-menu-scroll"><span class="glyphicon glyphicon-th-list"></span></a>
-
       <div id="menu-scroll">
         <ul class="nav nav-pills nav-stacked">
           <li><a href="#home">Hello.</a></li>
           <li><a href="#whoami">Who Am I ?</a></li>
           <li><a href="#skills">Skills</a></li>
+          <li><a href="#moreaboutme">More About Me</a></li>
         </ul>
       </div>
-
-    <div class="section" id="home"></div>
-    <div class="wrap">
-      <div class="container">
-        <h1>Hello. </h1>
-        <div class="row">
-          <div class="col-md-8">
-            <div class="media">
-              <div class="pull-left visible-md hidden-xs">
-                <img style="margin-bottom: 30px;" class="media-object img-circle" src="img/thomas_romera.png" height="128px" width="128px" alt="...">
-              </div>
-              <div id="lead-text-picture" class="media-body">
-                <span  class="lead">
-                  My name is Thomas Romera. <br>I am a 
-                  <span class="ruby-color"> <img width="50px" src="img/ruby.png"> (On Rails)</span> developer.</span>
-                </div>        
-              </div>
-            </div>
-            <div class="col-md-2 col-xs-1">
-              <table style="text-align: center;" class="table table-bordered">
-                <tr>
-                  <td>Developer Freelance</td>
-                </tr>
-                <tr>
-                  <td><span class="label label-danger">Currently not available</span></td>
-                </tr>
-                <tr>
-                  <td>
-                    <a href="http://twitter.com/erowtom"><img src="img/socialicon/Twitter.png" height="30" width="30" alt="Email" class="img-rounded"></a>
-                    <a href="http://linkedin.com/in/thomasromera"><img src="img/socialicon/LinkedIn.png" height="30" width="30" alt="Email" class="img-rounded"></a>
-                    <a href="http://github.com/erowlin"><img src="img/socialicon/Github.png" height="30" width="30" alt="Email" class="img-rounded">
-                      <br>
-                      <a href="skype:thomas.romera?call"><img src="img/socialicon/Skype.png" height="32" width="32" alt="Email" class="img-rounded"></a>
-                      <a href="mailto:contact@thomas-romera.com"><img src="img/socialicon/Arobase.png" height="30" width="30" alt="Email" class="img-rounded"></a>
-
-                    </td>
-
-                  </tr>
-                </table>
-
-              </div>
-            </div>
-          </div>   
-        </div>
-
-        <div id="step1" class="slider visible-md hidden-xs">
-          <div class="container" id="test">
-            <a href="#" style="color: black" id="arrow-down-first"> 
-              <p>
-                <center>
-                  <img height="120px" src="img/ruby.png">
-                </center> 
-              </p>
-            </a>
-          </div>
-        </div>
-
-
-        <div id="whoami" class="section"></div>
-
+      <div class="section" id="home"></div>
+      <div class="wrap">
         <div class="container">
-          <h1> Who Am I ? </h1>
+          <h1>Hello. </h1>
           <div class="row">
-            <div class="col-sm-6 col-md-4">
-              <div class="thumbnail">
-                image
-                <div class="caption">
-                  <h3>Thumbnail label</h3>
-                  <p>...</p>
+            <div class="col-md-8">
+              <div class="media">
+                <div class="pull-left visible-md hidden-xs">
+                  <img style="margin-bottom: 30px;" class="media-object img-circle" src="img/thomas_romera.png" height="128px" width="128px" alt="...">
+                </div>
+                <div id="lead-text-picture" class="media-body">
+                  <span  class="lead">
+                    My name is <b>Thomas Romera.</b> <br>I am a 
+                    <span class="ruby-color"> <img width="50px" src="img/ruby.png" alt="ruby"> (On Rails)</span> developer.</span>
+                  </div>        
                 </div>
               </div>
-            </div>
-            <div class="col-sm-6 col-md-4">
-              <div class="thumbnail">
-                image
-                <div class="caption">
-                  <h3>Thumbnail label</h3>
-                  <p>...</p>
+              <div class="col-md-2 col-xs-1">
+                <table style="text-align: center;" class="table table-bordered">
+                  <tr>
+                    <td>Developer Freelance</td>
+                  </tr>
+                  <tr>
+                    <td><span class="label label-danger">Currently not available</span></td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <a href="http://twitter.com/erowtom"><img src="img/socialicon/Twitter.png" height="30" width="30" alt="Email" class="img-rounded"></a>
+                      <a href="http://linkedin.com/in/thomasromera"><img src="img/socialicon/LinkedIn.png" height="30" width="30" alt="Email" class="img-rounded"></a>
+                      <a href="http://github.com/erowlin"><img src="img/socialicon/Github.png" height="30" width="30" alt="Email" class="img-rounded">
+                        <br>
+                        <a href="skype:thomas.romera?call"><img src="img/socialicon/Skype.png" height="32" width="32" alt="Email" class="img-rounded"></a>
+                        <a href="mailto:contact@thomas-romera.com"><img src="img/socialicon/Arobase.png" height="30" width="30" alt="Email" class="img-rounded"></a>
+                      </td>
+                    </tr>
+                  </table>
                 </div>
               </div>
+            </div>   
+          </div>
+
+          <div id="whoami" class="slider visible-md hidden-xs">
+            <div class="container" id="test">
+              <a href="#" style="color: black" id="arrow-down-whoami"> 
+                <p>
+                  <center>
+                    <img height="120px" src="img/ruby.png">
+                  </center> 
+                </p>
+              </a>
             </div>
-            <div class="col-sm-6 col-md-4">
-              <div class="thumbnail">
-                TATAAAAAAAAA
-                <div class="caption">
-                  <h3>Thumbnail label</h3>
-                  <p>...</p>
+          </div>
+
+
+          <div class="section"></div>
+          <div class="container">
+            <h1 id="whoami-scroll">Who Am I ? </h1>
+            <div class="row">
+              <div class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+                  image
+                  <div class="caption">
+                    <h3>Student</h3>
+                    <p>Still studying at Epitech, I'm currently on my fifth and final year. I learned a LOT from this school, not only on the computer science field, but also on the project management, personal gestion, group work...</p>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-sm-6 col-md-4">
-              <div class="thumbnail">
-                TOOTOOOOOOOOO
-                <div class="caption">
-                  <h3>Thumbnail label</h3>
-                  <p>...</p>
+              <div class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+                  image
+                  <div class="caption">
+                    <h3>Coder</h3>
+                    <p>...</p>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-sm-6 col-md-4">
-              <div class="thumbnail">
-                image
-                <div class="caption">
-                  <h3>Thumbnail label</h3>
-                  <p>...</p>
+              <div class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+                  TATAAAAAAAAA
+                  <div class="caption">
+                    <h3>Passionated</h3>
+                    <p>...</p>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-sm-6 col-md-4">
-              <div class="thumbnail">
-                image
-                <div class="caption">
-                  <h3>Thumbnail label</h3>
-                  <p>...</p>
+              <div class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+                  TOOTOOOOOOOOO
+                  <div class="caption">
+                    <h3>Traveler</h3>
+                    <p>...</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+                  image
+                  <div class="caption">
+                    <h3>Dynamic</h3>
+                    <p>...</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+                  image
+                  <div class="caption">
+                    <h3>I Love Startup</h3>
+                    <p>...</p>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
 
-        <div id="step2" class="slider visible-md hidden-xs">
-          <div class="container" id="test">
-            <a href="#" style="color: black" id="arrow-down-first"> 
-              <p>
-                <center>
-                  <img height="120px" src="img/ruby.png">
-                </center> 
-              </p>
-            </a>
+          <div id="skills" class="slider visible-md hidden-xs">
+            <div class="container" id="test">
+              <a href="#" style="color: black" id="arrow-down-skills"> 
+                <p>
+                  <center>
+                    <img height="120px" src="img/ruby.png">
+                  </center> 
+                </p>
+              </a>
+            </div>
           </div>
-        </div>
 
-        <div class="section"></div>
-        <div class="container">
-          <h1>Skills</h1>
-        </div>
+          <div class="section"></div>
+          <div class="container">
+            <h1 id="skills-scroll">Skills</h1>
+            <ul class="media-list">
+              <li class="media well">
+                <div class="pull-left" href="#">
+                  <img class="media-object" src="..." alt="...">
+                </div>
+                <div class="media-body">
+                Skill 1
+                </div>
+              </li>
+              <li class="media well">
+                <div class="pull-right" href="#">
+                  <img class="media-object" src="..." alt="...">
+                </div>
+                <div class="media-body">
+                Skill 2
+                </div>
+              </li>
+              <li class="media well">
+                <div class="pull-left" href="#">
+                  <img class="media-object" src="..." alt="...">
+                </div>
+                <div class="media-body">
+                Skill 3
+                </div>
+              </li>
+              <li class="media well">
+                <div class="pull-right" href="#">
+                  <img class="media-object" src="..." alt="...">
+                </div>
+                <div class="media-body">
+                Skill 4
+                </div>
+              </li>
+            </ul>
+          </div>
+
+          <div id="moreaboutme" class="slider visible-md hidden-xs">
+            <div class="container" id="test">
+              <a href="#" style="color: black" id="arrow-down-moreaboutme"> 
+                <p>
+                  <center>
+                    <img height="120px" src="img/ruby.png">
+                  </center> 
+                </p>
+              </a>
+            </div>
+          </div>
+          <div class="section"></div>
+          <div class="container">
+            <h1 id="moreaboutme-scroll">More About Me</h1>
 
 
-        <!-- JS =============================-->
-        <script src="js/jquery-1.10.2.min.js"></script>
+          </div>
+          
+
+
+          <!-- JS =============================-->
+          <script src="js/jquery-1.10.2.min.js"></script>
           <!-- 
             <script src="js/jquery.ui.touch-punch.min.js"></script>
             <script src="js/application.js"></script>
