Added some pictures, more content (Maybe the english is not perfect, please open an issue :) ), adjusted some problems on the responsive

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <ul class="nav nav-pills nav-stacked">
           <li><a href="#home">Hello.</a></li>
           <li><a href="#whoami">Who Am I ?</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#moreaboutme">More About Me</a></li>
+          <li><a href="#skills">Skills (Coming soon)</a></li>
+          <li><a href="#moreaboutme">More About Me (Coming soon)</a></li>
         </ul>
       </div>
       <div class="section" id="home"></div>
@@ -88,41 +88,41 @@
             <div class="row">
               <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                  image
+                  <img src="img/epitech.png" alt="Epitech Logo">
                   <div class="caption">
                     <h3>Student</h3>
-                    <p>Still studying at Epitech, I'm currently on my fifth and final year. I learned a LOT from this school, not only on the computer science field, but also on the project management, personal gestion, group work...</p>
+                    <p>Still studying at <a href="http://epitech.eu" title="Epitech Website" target="_blank">Epitech</a>, I'm currently on my fifth and final year. I learned a LOT from this school, not only on the computer science field, but also on the project management, personal gestion, group work...</p>
                   </div>
                 </div>
               </div>
               <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                  image
+                  <img src="img/code2.png" alt="Code">
                   <div class="caption">
                     <h3>Coder</h3>
-                    <p>...</p>
+                    <p>I enjoy coding. I Started at the age of 15, I'm now really enjoying it, because of my full-time working in this field, and I now know why I'm doing it. A better world with the software enginering is what I believe.</p>
                   </div>
                 </div>
               </div>
               <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                  TATAAAAAAAAA
+                  <img src="img/passionate.png" alt="Passionnate">
                   <div class="caption">
-                    <h3>Passionated</h3>
-                    <p>...</p>
+                    <h3>Passionate</h3>
+                    <p>I really enjoy what I do, and I have a lot of fun creating new stuff, constantly reworking and upgrading the old ones. I also like try and learn new stuff, constantly. I won't give up until I'm not 100% happy with the result.</p>
                   </div>
                 </div>
               </div>
               <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                  TOOTOOOOOOOOO
+                  <img src="img/travel.png" alt="Travel">
                   <div class="caption">
                     <h3>Traveler</h3>
-                    <p>...</p>
+                    <p>I first traveled to <a href="http://thomasinchina.tumblr.com" title="Personnal blog of my Shanghai trip" target="_blank">Shanghai</a> for my 3rd year internship, and I really enjoyed it. I'm now doing my 4th year in Quebec (Canada), and I plan to move again to China as soon as possible (Do you have something for me? :))</p>
                   </div>
                 </div>
               </div>
-              <div class="col-sm-6 col-md-4">
+              <!-- <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                   image
                   <div class="caption">
@@ -139,11 +139,11 @@
                     <p>...</p>
                   </div>
                 </div>
-              </div>
-            </div>
+              </div>-->
+            </div> 
           </div>
 
-          <div id="skills" class="slider visible-md hidden-xs">
+         <!--  <div id="skills" class="slider visible-md hidden-xs">
             <div class="container" id="test">
               <a href="#" style="color: black" id="arrow-down-skills"> 
                 <p>
@@ -210,7 +210,7 @@
             <h1 id="moreaboutme-scroll">More About Me</h1>
 
 
-          </div>
+          </div> -->
           
 
 
