Added hidden 'ruby' for indexing

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div id="lead-text-picture" class="media-body">
                   <span  class="lead">
                     My name is <b>Thomas Romera.</b> <br>I am a 
-                    <span class="ruby-color"> <img width="50px" src="img/ruby.png" alt="ruby"> (On Rails)</span> developer.</span>
+                    <span class="ruby-color"> <img width="50px" src="img/ruby.png" title="ruby"><span class="hidden">Ruby</span> (On Rails)</span> developer.</span>
                   </div>        
                 </div>
               </div>
