Modification code suivi

--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
             })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
             ga('create', 'UA-47105922-1', 'thomas-romera.com');
+            ga('require', 'linkid', 'linkid.js');
             ga('send', 'pageview');
           </script>
         </body>
