--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="section" id="home"></div>
       <div class="wrap">
         <div class="container">
-          <h1>Hello. </h1>
+          <h1>Hello.. </h1>
           <div class="row">
             <div class="col-md-8">
               <div class="media">
