I\'m now available to hire

--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@
         <ul class="nav nav-pills nav-stacked">
           <li><a href="#home">Hello.</a></li>
           <li><a href="#whoami">Who Am I ?</a></li>
-          <li><a href="#skills">Skills (Coming soon)</a></li>
-          <li><a href="#moreaboutme">More About Me (Coming soon)</a></li>
         </ul>
       </div>
       <div class="section" id="home"></div>
@@ -48,10 +46,10 @@
               <div class="col-md-2 col-xs-1">
                 <table style="text-align: center;" class="table table-bordered">
                   <tr>
-                    <td>Developer Freelance</td>
+                    <td>Freelance Developer</td>
                   </tr>
                   <tr>
-                    <td><span class="label label-danger">Currently not available</span></td>
+                    <td><span class="label label-success">Currently available ! Contact me !</span></td>
                   </tr>
                   <tr>
                     <td>
